yaml/backend-go-pod.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: go-calc-backend
  labels:
    name: calc-backend
    app: calculator
    language: go
spec:
  containers:
    - name: go-calc-backend
      image: dzkubereg.azurecr.io/calc/go-calc-backend:1001
      ports:
        - containerPort: 80
          name: http         
          protocol: TCP
  imagePullSecrets:
    - name: kuberegistry
