yaml/backend-pod.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: js-calc-backend
  labels:
    name: js-calc-backend
    app: calculator
spec:
  containers:
    - name: js-calc-backend
      image: denniszielke/js-calc-backend:latest
      ports:
        - containerPort: 8080
          name: calc-backend
          protocol: TCP
