yaml/calc-requester.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: java-calc-requester-jvm
  labels:
    name: java-calc-requester-jvm
    app: calculator
spec:
  containers:
    - name: java-calc-requester-jvm
      image: denniszielke/java-calc-requester-jvm:latest
      ports:
        - containerPort: 8080
          name: calc-requester
          protocol: TCP
