yaml/frontend-pod.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: calc-frontend
  labels:
    name: calc-frontend
    app: calculator
spec:
  containers:
    - name: calcfrontend
      image: dzkubereg.azurecr.io/calc/js-calc-frontend:1001
      ports:
        - containerPort: 80
          name: http
          protocol: TCP
  imagePullSecrets:
    - name: kuberegistry
