yaml/backend-depl.yml
apiVersion: v1
kind: Service
metadata:
  name: calc-backend-svc
  labels:
    name: calc-backend-svc
    app: calculator 
spec:
  ports:
  - port: 80
    name: calc-backend
    targetPort: 3001
  selector:
    name: calc-backend
    app: calculator
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: calc-backend-depl
spec:
  replicas: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: calc-backend
        app: calculator
    spec:
      containers:
      - name: calc-backend
        image: dzkubereg.azurecr.io/calc/js-calc-backend:1001
        ports:
          - containerPort: 80
            name: http         
            protocol: TCP
      imagePullSecrets:
      - name: kuberegistry
