yaml/calc-min-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: calc-frontend-svc
  labels:
    name: calc-frontend-svc
    app: calculator
spec:
  selector:
    name: js-calc-frontend 
  type: LoadBalancer
  ports:
   - port: 80
     name: http-frontend 
     targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: js-calc-frontend-depl
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: js-calc-frontend
        app: calculator
    spec:
      containers:
      - name: js-calc-frontend
        image: denniszielke/js-calc-frontend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            name: http-frontend         
---
apiVersion: v1
kind: Service
metadata:
  name: calc-backend-svc
  labels:
    name: calc-backend-svc
    app: calculator 
spec:
  ports:
  - port: 80
    name: http-backend
    targetPort: 8080
  selector:
    role: calc-backend
    app: calculator
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: js-calc-backend-depl
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: js-calc-backend
        role: calc-backend
        app: calculator
    spec:
      containers:
      - name: js-calc-backend
        image: denniszielke/js-calc-backend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            name: http-backend
