yaml/color.yml
apiVersion: v1
kind: Namespace
metadata:
  name: colors
---
apiVersion: v1
kind: Service
metadata:
  name: color-blue-svc
  namespace: colors
  labels:
    name: color-blue
    app: color-demo
spec:
  selector:
    name: color-blue
  type: ClusterIP
  ports:
   - port: 80
     name: http-blue 
     targetPort: 80
     protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-blue-depl
  namespace: colors
spec:
  replicas: 1
  selector:
    matchLabels:
      name: color-blue
      app: color-demo
  template:
    metadata:
      labels:
        name: color-blue
        app: color-demo
    spec:
      containers:
      - name: color-blue
        image: denniszielke/blue
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http-blue        
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: color-green-svc
  namespace: colors
  labels:
    name: color-green
    app: color-demo
spec:
  selector:
    name: color-green
  type: ClusterIP
  ports:
   - port: 80
     name: http-green 
     targetPort: 80
     protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-green-depl
  namespace: colors
spec:
  selector:
    matchLabels:
      name: color-green
      app: color-demo
  replicas: 1
  template:
    metadata:
      labels:
        name: color-green
        app: color-demo
    spec:
      containers:
      - name: color-green
        image: denniszielke/green
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http-green        
            protocol: TCP
