yaml/depl-calc-frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: {.frontend-namespace}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calc-frontend-app
  namespace: {.frontend-namespace}
  labels:
    app: calc-frontend-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: calc-frontend-app
  template:
    metadata:
      labels:
        app: calc-frontend-app
    spec:
      containers:
      - name: calc-frontend-app
        image: ghcr.io/{.registry}/demos/js-calc-frontend:{.tag}
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "100Mi"
            cpu: "20m"
          limits:
            memory: "400Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: http-frontend
  namespace: {.frontend-namespace}
  labels:
    app.kubernetes.io/name: calc-frontend-service
    app.kubernetes.io/version: 1.0.0
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "ing-4-subnet"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: calc-frontend-app
  type: LoadBalancer
