yaml/frontend-depl.yml
apiVersion: v1
kind: Service
metadata:
  name: calc-frontend-svc
  labels:
    name: calc-frontend-svc
    app: calculator
spec:
  selector:
    name: calc-frontend 
  type: LoadBalancer
  ports:
   - port: 80
     name: calc-frontend
     targetPort: 8080
     protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: calc-frontend
spec:
  replicas: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: calc-frontend
        app: calculator
    spec:
      containers:
      - name: js-calc-frontend
        image: denniszielke/js-calc-frontend:latest
        ports:
          - containerPort: 8080
            name: calc-frontend         
            protocol: TCP
