yaml/nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  ports:
  - port: 30101
    name: http
    targetPort: 80
  - port: 30102
    name: udp
    targetPort: 15503
  selector:
    name: nginx
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
            name: http         
            protocol: TCP
          - containerPort: 15503
            name: udp         
            protocol: UDP
