yaml/calc-contour-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calculator
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: calculator
  namespace: calculator
  labels:
    app: calculator
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - "{.hostname}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: http-frontend
      namespace: calculator
      port: 80
